JCRVLT-764 Require Java 11
JCRVLT-790 Update embedded Oak/JR2 dependencies to 1.72.0/2.22.0
Update jacoco-m-p to 0.8.13
Update Mockito to 5.15.2
Adjust test case
Increase version to 4.0.0-SNAPSHOT